Reboot is needed to find Flathub apps after installing flathub.flatpakrepo
How to reproduce:
- Install latest Fedora with all the updates, reboot
- Install https://dl.flathub.org/repo/flathub.flatpakrepo
- Open Activities/Software and type any Flathub app name
- Nothing is found
- Reboot
- Open Activities/Software and type any Flathub app name
- The app is found
Could you please somehow refresh search engine to start searching for Flathub apps immediately after installing the flathub.flatpakrepo file or introduce a new simpler approach to enable Flathub?