flatpak: Do a full refresh when a Flatpak installation changes

The installation change can mean not only application changes, but
also changes in the remotes. The associated silo should be invalidated
and a full refresh should be done to have the applications provided
by just installed remote available without gnome-software restart.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/1138